--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="simulator">Simulator</string>
     <string name="settings">Settings</string>
     <string name="about">About</string>
+
+    <string name="nav_menu">Menu</string>
 </resources>
