--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,4 +19,5 @@
     <string name="language_fr">Français</string>
     <string name="theme_select_title">Sélectionner un thème</string>
     <string name="language_select_title">Sélectionner la langue</string>
+    <string name="cancel">Annuler</string>
 </resources>
