--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="language_fr">French</string>
     <string name="theme_select_title">Select Theme</string>
     <string name="language_select_title">Select Language</string>
+    <string name="cancel">Cancel</string>
 </resources>
