--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -20,4 +20,5 @@
     <string name="theme_select_title">Sélectionner un thème</string>
     <string name="language_select_title">Sélectionner la langue</string>
     <string name="cancel">Annuler</string>
+    <string name="preferences">Préférences</string>
 </resources>
