--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="theme_select_title">Select Theme</string>
     <string name="language_select_title">Select Language</string>
     <string name="cancel">Cancel</string>
+    <string name="preferences">Preferences</string>
 </resources>
